--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -49,6 +49,8 @@
     <link href="{{ url_for('static', filename='falcon/assets/css/user-rtl.min.css') }}" rel="stylesheet" id="user-style-rtl">
     <link href="{{ url_for('static', filename='falcon/assets/css/user.min.css') }}" rel="stylesheet" id="user-style-default">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+
       <!--    Stylesheets from old site-->
 
     <script>
