admin email replaced

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -292,7 +292,7 @@
                 <p class="mb-0 text-600">
                   Agotrader LTD <span class="d-none d-sm-inline-block">| </span>
                   <br class="d-sm-none" /> 2021 &copy;
-                  <a href="mailto:support@algotrader.company">Contact Us</a>
+                  <a href="mailto:support@stockscore.company">Contact Us</a>
                 </p>
               </div>
             </div>
