--- a/app/templates/candidates/ticker_info_new.html
+++ b/app/templates/candidates/ticker_info_new.html
@@ -12,12 +12,10 @@ Algotrader | Stock Info
     <div class="col">
         <div class="card bg-100 shadow-none border">
             <div class="row gx-0 p-2 flex-between-center">
-                <div class="col-sm-auto align-items-center">
+                <div class="col-md-auto align-items-center m-1">
                     <div class="d-flex mb-1 align-items-center justify-content-between">
                         <div class="d-flex mb-1 align-items-center">
-                            <img class="img-fluid d-none d-md-inline" src="{{candidate.logo}}" width="80">
-<!--                        for mobile      -->
-                            <img class="img-fluid d-md-none" src="{{candidate.logo}}" width="50">
+                            <img class="img-fluid" src="{{candidate.logo}}" width="50">
                             <div class="ps-2">
                                 <h5 class="fw-bold mb-0">
                                     {{candidate.ticker}}
@@ -32,17 +30,100 @@ Algotrader | Stock Info
                     </div>
                     <div class="d-none d-md-block ps-1 pt-1"><a class="ticker-web menu__link article-link" target="_blank" href="{{candidate.website}}">Go to website</a></div>
                 </div>
-                <div class="col-md-auto p-3">
-                    aaaa
+                <div class="col-md-auto page-fmp-data d-sm-none d-lg-inline m-1">
+                    <div class="fs--1">
+                        <div class="fmp-price-content fw-bold">
+                            Price: <span class="fmp-price text-primary float-end"></span>
+                        </div>
+                        <div class="fmp-change-content">
+                            Change: <span class="fmp-change float-end ps-4 fs--2"></span>
+                        </div>
+                        <div class="fmp-close-content">
+                            Last Close: <span class="fmp-last-close float-end fs--2"></span>
+                        </div>
+                        <div class="help-cursor fmp-pne-content">
+                            P/E <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-tooltip-info jb-info-4 text-400" data-tooltip-id="4"></i> <span class="fmp-pe fw-bold float-end fs--2"></span>
+                        </div>
+                        <div class="help-cursor fmp-eps-content">
+                            EPS <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-tooltip-info jb-info-3 text-400" data-tooltip-id="3"></i> <span class="fmp-eps float-end fs--2"></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-auto p-3">
-                    bbbbbbbbb
+                <div class="col-md-auto d-flex m-1 me-2">
+                    <div class="bage-score bg-{{score_bg}} ms-2 rounded-3">
+                        <span class="badge rounded-pill bg-light text-dark m-2 mt-4 fs-1">{{market_data.algotrader_rank}}</span>
+                        <div class="score-title text-light text-center fs-1 fw-bold">Score</div>
+                    </div>
+                    <div class="market-data-actions px-2 flex-fill d-flex flex-column justify-content-between">
+                        <div title="Volatility of a stock in relation to the overall market. 12M" class="justify-content-between align-items-center help-cursor ticker-data mr-2 badge {% if market_data.beta is not none and user_settings.algo_min_beta is not none and market_data.beta >= user_settings.algo_min_beta %}
+                            btn-success
+                            {% else %}
+                            btn-warning
+                            {% endif %}">
+                            <span class="float-start">
+                                Beta
+                            </span>
+                            <span class="badge rounded-pill bg-light text-dark px-3 float-end">
+                                {% if market_data.beta is not none%}
+                                {{market_data.beta | round(1)}}
+                                {% else %}
+                                0
+                                {% endif %}
+                            </span>
+                        </div>
+                        <div title="Lower than cheapest analyst prediction" class="justify-content-between align-items-center help-cursor ticker-data mr-2 badge {% if market_data.under_priced_pnt is not none and user_settings.algo_min_underprice is not none and market_data.under_priced_pnt >= user_settings.algo_min_underprice %}
+                            btn-success
+                            {% else %}
+                            btn-warning
+                            {% endif %}">
+                            <span class="float-start">
+                                Underpriced
+                            </span>
+                            <span class="badge rounded-pill bg-light text-dark px-3 float-end">
+                                {% if market_data.under_priced_pnt is not none%}
+                                {{market_data.under_priced_pnt | round(1)}}
+                                {% else %}
+                                0
+                                {% endif %}
+                            </span>
+                        </div>
+                        <div title="Todays good entry point. Based on 1 last year intraday volatility" class="justify-content-between align-items-center help-cursor ticker-data mr-2 badge btn-success">
+                            <span class="float-start me-2">
+                                Buying trigger
+                            </span>
+                            <span class="badge rounded-pill bg-light text-dark px-3 float-end">
+                                {{market_data.buying_target_price_fmp | round(1)}}
+                            </span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-auto p-3">
-                    ccccccccccc
-                </div>
-                <div class="col-md-auto p-3">
-                    ddddddddddddd
+                <div class="col-md-auto m-1 d-none d-md-inline">
+                    <div class="fs--1">
+                        <div class="ticker-exchange ticket-info-row d-flex flex-between-center">
+                            <div class="ticket-info-title">Exchange:</div>
+                            <div class="ticker-sector-val ticket-info-val" data-exchange="{{candidate.exchange_short}}">{{candidate.exchange_short}}</div>
+                        </div>
+                        <div class="ticker-sector ticket-info-row d-flex flex-between-center">
+                            <div class="ticket-info-title">Sector:</div>
+                            <div class="ticker-sector-val ticket-info-val" data-sector="{{candidate.sector}}">{{candidate.sector}}</div>
+                        </div>
+                        <div class="ticker-industry ticket-info-row d-flex flex-between-center">
+                            <div class="ticket-info-title pe-5">Industry:</div>
+                            <div class="ticket-info-val ps-5">{{candidate.industry}}</div>
+                        </div>
+                        <div class="ticker-action ticket-info-row d-flex flex-between-center">
+                            <div class="ticket-info-title">Personal List:</div>
+                            <div class="ticket-info-val div-content">
+                                {% if not in_list %}
+                                <button type="button" class="btn btn-outline-info add-candidate btn-sm fs--2">Follow</button>
+                                {% else %}
+                                <button type="button" class="btn btn-outline-success candidate-in-list btn-sm fs--2">
+                                    <i class="metismenu-icon fa fa-check">Remove from list</i>
+                                </button>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,4 +154,13 @@ Algotrader | Stock Info
 
 {% endblock %}
 {% block scripting %}
+<script>
+var ticker = '{{ candidate.ticker }}';
+var TOOLTIPS = {{ tooltips|tojson }};
+var company_name = '{{ candidate.company_name }}';
+var user_email = '{{ current_user.email }}';
+var hist_data = '{{ hist_data|tojson }}';
+</script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/spyder_project.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/ticker_info_new.js') }}"></script>
 {% endblock %}
