--- a/app/templates/candidates/today_new.html
+++ b/app/templates/candidates/today_new.html
@@ -12,7 +12,7 @@ Algotrader | Today
 <div class="row mb-3">
     <div class="col">
         <div class="card bg-100 shadow-none border">
-            <div class="row gx-0 flex-between-center">
+            <div class="row gx-0 flex-between-center flex-fill">
                 <div class="col-sm-auto d-flex align-items-center justify-content-between">
                     <div class="d-flex align-items-center">
                         <i class="far fa-newspaper fa-4x p-3"></i>
