algotrader replaced by Stock Score

--- a/app/templates/account/email/black_swan.html
+++ b/app/templates/account/email/black_swan.html
@@ -1,5 +1,5 @@
 <p>Dear user, today S & P dropped below a value You configured in Your settings.</p>
 <p>The trigger for potential MARKET DROP was activated.</p>
-<p>On Managed Account Algotrader have closed all open positions and disabled a Buy option.</p>
+<p>On Managed Account Stock Score have closed all open positions and disabled a Buy option.</p>
 
-<p>To enable the BUY manually please follow: <a href="https://www.algotrader.company/algotradersettings/usersettings">settings page</a></p>
+<p>To enable the BUY manually please follow: <a href="https://www.stockscore.company/algotradersettings/usersettings">settings page</a></p>
