--- a/app/templates/account/email/market_fall.html
+++ b/app/templates/account/email/market_fall.html
@@ -1,2 +1,2 @@
-<p>Alert from Algotrader : 3 deals closed on LOSS today - buying cancelled - please review</p>
+<p>Alert from Stock Score : 3 deals closed on LOSS today - buying cancelled - please review</p>
 
