--- a/app/templates/account/email/position_open.html
+++ b/app/templates/account/email/position_open.html
@@ -1,7 +1,7 @@
 <p>New position was open for {{ position.ticker }}
-    Algotrader bought {{ position.stocks|string}} stocks by {{ position.open_price|string }} each.</p>
+    Stock Score bought {{ position.stocks|string}} stocks by {{ position.open_price|string }} each.</p>
 <p>At open :</p>
-<p><b>algotrader rank:</b> {{ position.buying_algotrader_rank }}</p>
+<p><b>Stock Score rank:</b> {{ position.buying_algotrader_rank }}</p>
 <p><b>underprice:</b> {{ position.buying_underprice }}</p>
 <p><b>12 momentum:</b> {{ position.buying_twelve_month_momentum }}</p>
 <p><b>average drop:</b> {{ position.buying_average_drop }}</p>
