--- a/app/templates/account/join_invite.html
+++ b/app/templates/account/join_invite.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Join Invite
+Stock Score | Join Invite
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
