--- a/app/templates/account/login_new.html
+++ b/app/templates/account/login_new.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | LogIn
+Stock Score | LogIn
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
