--- a/app/templates/account/privacy_policy.html
+++ b/app/templates/account/privacy_policy.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Privacy policy
+Stock Score | Privacy policy
 {% endblock %}
 
 {% block styles %}
