--- a/app/templates/account/reset_password.html
+++ b/app/templates/account/reset_password.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Reset Password
+Stock Score | Reset Password
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
