--- a/app/templates/account/subscriptions_new.html
+++ b/app/templates/account/subscriptions_new.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Subscriptions
+Stock Score | Subscriptions
 {% endblock %}
 
 {% block styles %}
