--- a/app/templates/account/unconfirmed.html
+++ b/app/templates/account/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Unconfirmed
+Stock Score | Unconfirmed
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
