--- a/app/templates/admin/admin_index_new.html
+++ b/app/templates/admin/admin_index_new.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Administration
+Stock Score | Administration
 {% endblock %}
 {% block content %}
 <!--title row-->
@@ -14,7 +14,7 @@ Algotrader | Administration
             <div class="card-body position-relative">
               <div class="row">
                 <div class="col-lg-8">
-                  <h3>Algotrader administration</h3>
+                  <h3>Stock Score administration</h3>
                   <p class="mb-0">System</p>
                 </div>
               </div>
@@ -28,7 +28,7 @@ Algotrader | Administration
     <div class="mb-2">
         <div class="card">
             <div class="card-header border-bottom">
-                Algotrader Settings
+                Stock Score Settings
             </div>
             <div class="card-body pt-0">
                 Table
