--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Market data
+Stock Score | Market data
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
@@ -35,7 +35,7 @@ Algotrader | Market data
                     <th>Ticker</th>
                     <th>Average drop %</th>
                     <th>Average spread %</th>
-                    <th>Algotrader Rank</th>
+                    <th>Stock Score Rank</th>
                     <th>Underpriced</th>
                     <th>12M Momentum</th>
                     <th>Target Mean price</th>
