--- a/app/templates/admin/new_user.html
+++ b/app/templates/admin/new_user.html
@@ -2,7 +2,7 @@
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
 {% block page_title %}
-Algotrader | New user
+Stock Score | New user
 {% endblock %}
 {% block content %}
 
