--- a/app/templates/admin/registered_users.html
+++ b/app/templates/admin/registered_users.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Registered users
+Stock Score | Registered users
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
