--- a/app/templates/admin/spider_statistic.html
+++ b/app/templates/admin/spider_statistic.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Spiders
+Stock Score | Spiders
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
