--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -63,7 +63,7 @@
                 <tr>
                     <th></th>
                     <th>Ticker</th>
-                    <th class="sorted descending">Algotrader <br/>rank</th>
+                    <th class="sorted descending">Stock Score <br/>rank</th>
                     <th></th>
                     <th></th>
                     <th>Enabled</th>
@@ -136,7 +136,7 @@
                 <tr>
                     <th></th>
                     <th class="sorted descending">Ticker</th>
-                    <th class="sorted descending">Algotrader <br/>rank</th>
+                    <th class="sorted descending">Stock Score <br/>rank</th>
                     <th>Reason</th>
                     <th>Company</th>
                     <th>Sector</th>
