--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -105,7 +105,8 @@
             </div>
             <a class="navbar-brand d-none d-xl-block" href="/">
               <div class="d-flex align-items-center py-1">
-                <img class="me-2" src="../../static/images/Logos_New/logo_transparent_background.png" alt="" width="140" />
+                <img class="me-2" src="../../static/images/StockScoreLogo/rsz_logo_transparent_background.png" alt="" width="40" />
+                <span class="font-sans-serif">Stock Score</span>
               </div>
             </a>
           </div>
