--- a/app/templates/layouts/base_old.html
+++ b/app/templates/layouts/base_old.html
@@ -29,10 +29,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <!--    <title>Algotrader-Server</title>-->
+    <!--    <title>Stock Score-Server</title>-->
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
-    <meta name="description" content="Algotrader server dashboard">
+    <meta name="description" content="Stock Score server dashboard">
     <meta name="msapplication-tap-highlight" content="no">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/app_styles.css') }}">
