--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/main.html' %}
 {% block page_title %}
-Algotrader
+Stock Score
 {% endblock %}
 {% block content %}
 
@@ -581,9 +581,9 @@ Algotrader
                                 <i class="fas fa-balance-scale-left text-white"></i>
                             </div>
                             <div class="custom-body">
-                                <h5 class="card-title">Algotrader Score</h5>
+                                <h5 class="card-title">Stock Score Score</h5>
                                 <div class="custom-body-content">
-                                    <p>Algotrader AI based score for the ticker</p>
+                                    <p>Stock Score AI based score for the ticker</p>
                                 </div>
                             </div>
                         </div>
