--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Performance
+Stock Score | Performance
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
@@ -12,7 +12,7 @@ Algotrader | Performance
                 </div>
                 <div>
                     Closed positions
-                    <div class="page-title-subheading">Deals executed by Algotrader.
+                    <div class="page-title-subheading">Deals executed by Stock Score.
                     </div>
                 </div>
             </div>
