--- a/app/templates/userview/registration_steps_1.html
+++ b/app/templates/userview/registration_steps_1.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Station Login
+Stock Score | Station Login
 {% endblock %}
 
 {% block styles %}
