--- a/app/templates/userview/registration_steps_3.html
+++ b/app/templates/userview/registration_steps_3.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Data Subscriptions
+Stock Score | Data Subscriptions
 {% endblock %}
 
 {% block styles %}
@@ -68,7 +68,7 @@ Algotrader | Data Subscriptions
 
 
                             <p>
-                                You may use TWS +Algotrader pair on Your personal computer. if You decide to do so - please follow the
+                                You may use TWS +Stock Score pair on Your personal computer. if You decide to do so - please follow the
                                 instruction below. </br>
                                 Otherwise we <b>set everything for You </b> when we deploy a dedicated Virtual Machine
                             </p>
