--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Trader station
+Stock Score | Trader station
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
@@ -21,7 +21,7 @@ Algotrader | Trader station
                 </div>
                 <div>Trader station
                     <div class="page-title-subheading">
-                        Last state of Algotrader station reported.
+                        Last state of Stock Score station reported.
                     </div>
                 </div>
                 <!-- TradingView Widget BEGIN -->
