--- a/app/templates/account/manage.html
+++ b/app/templates/account/manage.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Manage
+Stock Score | Manage
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
