--- a/app/templates/account/register_new.html
+++ b/app/templates/account/register_new.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Register
+Stock Score | Register
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
