--- a/app/templates/account/terms_of_use.html
+++ b/app/templates/account/terms_of_use.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader | Terms Of Use
+Stock Score | Terms Of Use
 {% endblock %}
 
 {% block styles %}
@@ -13,7 +13,7 @@ Algotrader | Terms Of Use
     <div class="header__wrap wrap">
         <div class="header__row row">
             <div class="header__col header__col_left">
-                <h3>Terms and conditions for accessing or otherwise using Algotrader service</h3>
+                <h3>Terms and conditions for accessing or otherwise using Stock Score service</h3>
             </div>
             <div class="header__col header__col_right">
                 <ul class="menu">
