--- a/app/templates/admin/manage_user.html
+++ b/app/templates/admin/manage_user.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base_old.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% block page_title %}
-Algotrader | Manage user
+Stock Score | Manage user
 {% endblock %}
 {% set deletion_endpoint = 'admin.delete_user_request' %}
 
