--- a/app/templates/admin/telegram_signals.html
+++ b/app/templates/admin/telegram_signals.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Telegram signals
+Stock Score | Telegram signals
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
