--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Monitor
+Stock Score | Monitor
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
