--- a/app/templates/candidates/ticker_info_new.html
+++ b/app/templates/candidates/ticker_info_new.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Algotrader | Stock Info
+Stock Score | Stock Info
 {% endblock %}
 
 {% block styles %}
