--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_old.html' %}
 {% block page_title %}
-Algotrader | Today
+Stock Score | Today
 {% endblock %}
 
 {% block content %}
