--- a/app/templates/mainpage/main.html
+++ b/app/templates/mainpage/main.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader
+Stock Score
 {% endblock %}
 
 {% block header %}
@@ -187,7 +187,7 @@ Algotrader
         <div class="score__wrap wrap">
             <div class="score__row row">
                 <div class="score__col">
-                    <h2>Algotrader score</h2>
+                    <h2>Stock Score score</h2>
                     <div class="score__text text">The data is saved in DB in order to validate the analysis quality</div>
                     <div class="scoreItems">
                         <div class="scoreItems__topBlock">
