--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base_old.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% block page_title %}
-Algotrader | Settings
+Stock Score | Settings
 {% endblock %}
 
 {% macro user_info(user) %}
@@ -30,8 +30,8 @@ Algotrader | Settings
                     <i class="pe-7s-albums icon-gradient bg-mean-fruit">
                     </i>
                 </div>
-                <div>User Algotrader Settings
-                    <div class="page-title-subheading">Settings for Algotrader client.
+                <div>User Stock Score Settings
+                    <div class="page-title-subheading">Settings for Stock Score client.
                     </div>
                 </div>
             </div>
@@ -216,10 +216,10 @@ Algotrader | Settings
                         <div class="form-row pt-4">
                             <div class="col-md-6 input-group d-block">
                                 <div>
-                                    <label for="algo_min_algotrader_rank" class="">Min Analytics Algotrader</label>
+                                    <label for="algo_min_algotrader_rank" class="">Min Analytics Stock Score</label>
                                 </div>
                                 <div class="d-flex">
-                                    <input title="Use minimal Analytics Algotrader rank or transmit All"
+                                    <input title="Use minimal Analytics Stock Score rank or transmit All"
                                                {%if user_settings.algo_apply_algotrader_rank%}
                                                checked
                                                {% endif %}
