--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -10,7 +10,7 @@ Stock Score
         <div class="container">
             <div class="section-title font-weight-bold">
 <!--                <h2>Analytics driven automated trading</h2>-->
-                <h2>AI Stock Anlytics and Market Emotions</h2>
+                <h2>Stock Score: AI Analytics and Market Emotions</h2>
             </div>
             <div class="main-cards">
                 <div class="row">
