settings for trader station done : need : modal- links

--- a/app/templates/mainpage/main.html
+++ b/app/templates/mainpage/main.html
@@ -230,7 +230,7 @@ Stock Score
         <div class="score__wrap wrap">
             <div class="score__row row">
                 <div class="score__col">
-                    <h2>Stock Score score</h2>
+                    <h2>Stock Score</h2>
                     <div class="score__text text">The data is saved in DB in order to validate the analysis quality</div>
                     <div class="scoreItems">
                         <div class="scoreItems__topBlock">
