--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -229,7 +229,8 @@ Stock Score | Settings
                                                name="algo_apply_algotrader_rank" id="algo_apply_algotrader_rank" type="checkbox"
                                                class="form-check-input">
                                     <input title="Minimal Analytics Algotrader rank to transmit to station"
-                                           value="{{user_settings.algo_min_algotrader_rank}}" name="algo_min_algotrader_rank"
+                                           value="{{user_settings.algo_min_algotrader_rank}}"
+                                           name="algo_min_algotrader_rank"
                                            id="algo_min_algotrader_rank" type="text"
                                            class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
