the links better not to stretch

--- a/app/templates/userview/algotraderSettings_new.html
+++ b/app/templates/userview/algotraderSettings_new.html
@@ -184,7 +184,7 @@ Stock Score | Settings
                                                class="form-control ms-2"  type="number" step="1" min="1" max="100"  />
                                         <label class="text-muted small filter-comment col-md-3">
                                         <span class="emotion-loading"></span>
-                                        <span class="text-primary stretched-link emotion-filter font-weight-bold"></span>
+                                        <span class="text-primary link emotion-filter font-weight-bold"></span>
                                         <span class="emotion-fixed-filter-text pl-2"></span>
                                     </label>
                                     </div>
@@ -320,7 +320,7 @@ Stock Score | Settings
                                         With
                                         <span class="text-primary pr-2 pl-2 blackswan-min">{{user_settings.algo_positions_for_swan}}%</span>
                                         selected there were :
-                                        <span class="text-primary pr-1 pl-2 stretched-link font-weight-bold show_modal_snp"><span class="bsw-loading"></span><span class="blackswan-events pr-1"></span> events in last 5 Years</span>
+                                        <span class="text-primary pr-1 pl-2 link font-weight-bold show_modal_snp"><span class="bsw-loading"></span><span class="blackswan-events pr-1"></span> events in last 5 Years</span>
                                     </label>
                                     </div>
                                 </div>
