--- a/app/templates/userview/algotraderSettings_new.html
+++ b/app/templates/userview/algotraderSettings_new.html
@@ -38,14 +38,15 @@ Stock Score | Settings
                         <div class="row">
                             <div class="col-12 pt-2 d-flex justify-content-center">
                                 <div class="ps-2">
-                                    <div class="form-check form-switch mb-0 lh-1 d-flex align-items-center">
-                                      <input class="form-check-input " type="checkbox"
+                                    <div class="form-check form-switch mb-0 lh-1 d-flex align-items-center ">
+                                      <input class="form-check-input m-2" type="checkbox"
                                              id="server_use_system_candidates"
                                              name="server_use_system_candidates" {%if
                                            user_settings.server_use_system_candidates%}
                                            checked
                                            {% endif %} />
-                                      <span class="ps-2">All US Stocks</span>
+                                        <h5 class="">All US stocks<span title="All US stocks OR favorites only" class="fs--2 ms-1 text-primary" data-bs-toggle="tooltip" data-bs-placement="top" >
+                                        <span class="fas fa-question-circle"></span></span></h5>
                                     </div>
                                 </div>
                             </div>
@@ -62,9 +63,9 @@ Stock Score | Settings
                                                value="{{user_settings.algo_min_algotrader_rank}}"
                                                class="form-control ms-2"  type="number" step="0.1" min="1" max="10"  />
 
-                                        <label class="text-muted small filter-comment">
+                                        <label class="text-muted small filter-comment m-2">
                                             <span class="loading">a</span>
-                                            <span class="text-primary algo-rank-filter num-candidates">b</span>
+                                            <div class="text-primary algo-rank-filter num-candidates">b</div>
                                             <span class="fixed-filter-text pl-2">c</span>
                                         </label>
                                     </div>
@@ -83,9 +84,9 @@ Stock Score | Settings
                                                value="{{user_settings.algo_min_underprice}}"
                                                class="form-control ms-2"  type="number" step="1" min="0" max="100"  />
 
-                                        <label class="text-muted small filter-comment">
+                                        <label class="text-muted small filter-comment m-2">
                                             <span class="loading">a</span>
-                                            <span class="text-primary underprice-filter num-candidates">b</span>
+                                            <div class="text-primary underprice-filter num-candidates">b</div>
                                             <span class="fixed-filter-text pl-2">c</span>
                                         </label>
                                     </div>
@@ -104,9 +105,9 @@ Stock Score | Settings
                                                value="{{user_settings.algo_min_momentum}}"
                                                class="form-control ms-2"  type="number" step="1" min="-100" max="100"  />
 
-                                        <label class="text-muted small filter-comment">
+                                        <label class="text-muted small filter-comment m-2">
                                             <span class="loading"></span>
-                                            <span class="text-primary momentum-filter num-candidates"></span>
+                                            <div class="text-primary momentum-filter num-candidates"></div>
                                             <span class="fixed-filter-text pl-2"></span>
                                         </label>
                                     </div>
@@ -125,9 +126,9 @@ Stock Score | Settings
                                                value="{{user_settings.algo_min_beta}}"
                                                class="form-control ms-2"  type="number" step="0.1" min="0" max="100"  />
 
-                                        <label class="text-muted small filter-comment">
+                                        <label class="text-muted small filter-comment m-2">
                                             <span class="loading"></span>
-                                            <span class="text-primary beta-filter num-candidates"></span>
+                                            <div class="text-primary beta-filter num-candidates"></div>
                                             <span class="fixed-filter-text pl-2"></span>
                                         </label>
                                     </div>
@@ -146,9 +147,9 @@ Stock Score | Settings
                                                value="{{user_settings.algo_max_intraday_drop_percent}}"
                                                class="form-control ms-2"  type="number" step="1" min="0" max="100"  />
 
-                                        <label class="text-muted small filter-comment">
+                                        <label class="text-muted small filter-comment m-2">
                                             <span class="loading"></span>
-                                            <span class="text-primary intraday-filter num-candidates"></span>
+                                            <div class="text-primary intraday-filter num-candidates"></div>
                                             <span class="fixed-filter-text pl-2"></span>
                                         </label>
                                     </div>
@@ -166,15 +167,14 @@ Stock Score | Settings
                                                id="algo_min_emotion"
                                                value="{{user_settings.algo_min_emotion}}"
                                                class="form-control ms-2"  type="number" step="1" min="1" max="100"  />
-                                        <label class="text-muted small filter-comment col-md-3">
+                                        <label class="text-muted small filter-comment m-2">
                                         <span class="emotion-loading"></span>
-                                        <span class="text-primary link emotion-filter font-weight-bold"></span>
+                                        <div class="text-primary link emotion-filter font-weight-bold"></div>
                                         <span class="emotion-fixed-filter-text pl-2"></span>
                                     </label>
                                     </div>
                                 </div>
                             </div>
-
 
 
                             <div class="w-100"></div>
