--- a/app/templates/mainpage/header.html
+++ b/app/templates/mainpage/header.html
@@ -39,7 +39,7 @@
                     </li>
                     <li class="menu__item">
                         <a href="/account/register" class="menu__link">
-                            Register
+                            Free Trial
                         </a>
                     </li>
                     {% endif %}
